--- a/app/src/main/res/layout/activity_my_view.xml
+++ b/app/src/main/res/layout/activity_my_view.xml
@@ -7,6 +7,19 @@
 
     <include layout="@layout/title" />
 
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginRight="7dp"
+        android:layout_marginTop="7dp"
+        android:src="@drawable/ic_done" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -79,4 +92,5 @@
 
         </LinearLayout>
     </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
