--- a/app/src/main/res/layout/activity_mine.xml
+++ b/app/src/main/res/layout/activity_mine.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/mine_background">
+    android:background="@drawable/mine_background"
+    android:id="@+id/layout_mine">
 
     <include layout="@layout/title" />
 
