--- a/app/src/main/res/layout/activity_my_view.xml
+++ b/app/src/main/res/layout/activity_my_view.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/my_view_background">
+    android:background="@drawable/my_view_background"
+    android:id="@+id/layout_my_view">
 
     <include layout="@layout/title" />
 
