--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorTextGreen">#006600</color>
     <color name="colorBackgroundGreen">#F0F8FF</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorTransparent">#00000000</color>
     <color name="colorBlack">#000000</color>
 </resources>
