--- a/app/src/main/res/layout/activity_add_one.xml
+++ b/app/src/main/res/layout/activity_add_one.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/add_one_background"
     android:orientation="vertical">
 
@@ -36,97 +37,34 @@
         </HorizontalScrollView>
     </LinearLayout>
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="76dp"-->
-        <!--android:alpha="0.4"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--<ImageButton-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:src="@drawable/g1" />-->
-        <!--&lt;!&ndash;android:background="#00ff99" &ndash;&gt;-->
-
-        <!--<ImageButton-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:src="@drawable/g2" />-->
-        <!--&lt;!&ndash;android:background="#00cc99"&ndash;&gt;-->
-
-        <!--<ImageButton-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:src="@drawable/g3" />-->
-        <!--&lt;!&ndash;android:background="#009999" &ndash;&gt;-->
-
-        <!--<ImageButton-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:src="@drawable/g4" />-->
-        <!--&lt;!&ndash;android:background="#006699" &ndash;&gt;-->
-
-        <!--<ImageButton-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:src="@drawable/g5" />-->
-        <!--&lt;!&ndash;android:background="#003399" &ndash;&gt;-->
-    <!--</LinearLayout>-->
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="20dp"></LinearLayout>-->
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="76dp"-->
-        <!--android:alpha="0.4"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--<ImageButton-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:src="@drawable/g6" />-->
-        <!--&lt;!&ndash;android:background="#99ffcc"&ndash;&gt;-->
-
-        <!--<ImageButton-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:src="@drawable/g7" />-->
-        <!--&lt;!&ndash;android:background="#99cccc"&ndash;&gt;-->
-
-        <!--<ImageButton-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:src="@drawable/g9" />-->
-        <!--&lt;!&ndash;android:background="#9999cc" &ndash;&gt;-->
-
-        <!--<ImageButton-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:src="@drawable/g10" />-->
-        <!--&lt;!&ndash;android:background="#9966cc"&ndash;&gt;-->
-
-        <!--<ImageButton-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:src="@drawable/g11" />-->
-        <!--&lt;!&ndash;android:background="#9933cc" &ndash;&gt;-->
-    <!--</LinearLayout>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/add_one_color"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.3"
+            android:background="@color/colorDiet">
+            <com.nightonke.boommenu.BoomMenuButton
+                android:id="@+id/add_one_bmb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:bmb_buttonEnum="textInsideCircle"
+                app:bmb_piecePlaceEnum="piecePlace_dot_8_1"
+                app:bmb_buttonPlaceEnum="buttonPlace_sc_8_1"
+                app:bmb_normalColor="@color/colorWhite"
+                />
+            <TextView
+                android:id="@+id/add_one_classification"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/classification_diet"
+                android:textColor="@color/colorWhite"
+                android:textSize="40dp"
+                android:layout_gravity="center_horizontal|center_vertical"/>
+        </android.support.design.widget.CoordinatorLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
