--- a/app/src/main/res/layout/activity_my_view.xml
+++ b/app/src/main/res/layout/activity_my_view.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <com.nightonke.boommenu.BoomMenuButton
-            android:id="@+id/bmb"
+            android:id="@+id/my_view_bmb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
