--- a/app/src/main/res/layout/bill_item.xml
+++ b/app/src/main/res/layout/bill_item.xml
@@ -19,6 +19,15 @@
         android:textSize="40sp"
         android:layout_toRightOf="@id/money_symbol"/>
 
+    <TextView
+        android:id="@+id/my_view_classification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_alignParentRight="true"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
