--- a/app/src/main/res/layout/page_item.xml
+++ b/app/src/main/res/layout/page_item.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FAE8DA">
+    android:background="@drawable/analysis_body">
     <TextView
         android:id="@+id/page_item_text"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -39,8 +39,9 @@
 
     <TextView
         android:id="@+id/page_item_anal"
-        android:layout_width="wrap_content"
+        android:layout_width="222dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="152dp"
